--- a/src/styles/StudentsModal.css
+++ b/src/styles/StudentsModal.css
@@ -1,25 +1,12 @@
-/* .modalOverlay {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0,0,0,0.6);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  } */
+
   .modalOverlay {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    
-    /* Background blur */
-    backdrop-filter: blur(5px); /* bu blur effekt beradi */
-    background-color: rgba(0, 0, 0, 0.4); /* biroz qorong‘i qatlam */
-  
+    backdrop-filter: blur(5px); 
+    background-color: rgba(0, 0, 0, 0.4); 
     display: flex;
     justify-content: center;
     align-items: center;
@@ -33,10 +20,47 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background:none;
-    border: 3px solid var(--toggle-color);
+    background:var(--bg-cont);
     padding: 30px;
     border-radius: 10px;
-    z-index: 1000;
+    z-index: 1100;
   }
   
+
+
+
+
+  @media(max-width:1440px){
+  
+  }
+  @media(max-width:1024px){
+  
+  }
+  @media(max-width:850px){
+  
+  }
+  @media(max-width:768px){
+    .modalOverlay {
+      /* width: 50%;
+      height: 50vh;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      background:var(--bg-cont);
+      padding: 30px;
+      border-radius: 10px; */
+      z-index: 63000;
+    }
+  }
+  @media(max-width:500px){
+  
+  }
+  @media(max-width:425px){
+  
+  }
+  @media(max-width:375px){
+  
+  }
+  @media(max-width:320px){
+  
+  }
